[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "PyVideoKit"
version = "0.1.0"
description = "A collection of FFmpeg utility scripts"
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
authors = [
  {name = "Evilchuck666", email = "carlos.martinez.medina1992@gmail.com"}
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = []

[project.scripts]
apply-vhs-effect = "pyvideokit.apply_vhs_effect:main"
concat-videos = "pyvideokit.concat_videos:main"
convert-to-utvideo = "pyvideokit.convert_to_utvideo:main"
extract-audio = "pyvideokit.extract_audio:main"
fade-video = "pyvideokit.fade_video:main"
prepare-youtube = "pyvideokit.prepare_youtube:main"
trim-video = "pyvideokit.trim_video:main"

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["pyvideokit"]
