[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "PyVideoKit"
version = "0.3.0"
description = "FFmpeg-based video processing tools — CLI and GUI"
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
authors = [{name = "Evilchuck666", email = "carlos.martinez.medina1992@gmail.com"}]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]
dependencies = [
    "PyVideoKit-Libs",
    "PyVideoKit-CLI",
    "PyVideoKit-GUI",
]

[tool.setuptools]
packages = []
